--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.h4{
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: hotpink;
+  margin: 20px 0;
+}
+.addnewuserbtn{
+  margin: 20px;
+}
+.adduser{
+  text-align: center;
+  font-family: sans-serif;
+  color: green;
+  font-weight: bold;
+}
+.edituser{
+  text-align: center;
+  font-family: sans-serif;
+  color:skyblue;
+  font-weight: bold;
 }
